src/backend/order-service/envoy/envoy.yaml
node:
  cluster: order-service-cluster


admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8082
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            provider:
                name: envoy.tracers.opentelemetry
                typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                    grpc_service:
                        envoy_grpc:
                            cluster_name: jaeger
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: order-service_route
            virtual_hosts:
            - name: order-service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: order-service
                decorator:
                  operation: checkTracing
          http_filters:
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                proto_descriptor: "/etc/envoy/descriptors/order-service.pb"
                services: ["OrderService"]
                match_incoming_request_route: false
                ignore_unknown_query_parameters: true
                auto_mapping: false
                convert_grpc_status: true
                print_options:
                    add_whitespace: true
                    always_print_primitive_fields: true
                    always_print_enums_as_ints: false
                    preserve_proto_field_names: true
          - name: envoy.filters.http.router
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router



  clusters:
  - name: order-service
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}  # Enable HTTP/2 for gRPC
    load_assignment:
        cluster_name: order-service
        endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                        socket_address:
                            address: order-service
                            port_value: 8888

  - name: jaeger
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 4317
